# databases-poc

./: .gitignore  .pre-commit-config.yaml  container.py  database.py  main.py  model.py  pyproject.toml  techstack.md  techstack.yml
sql/: __init__.py  fetch_all_users_inner_joined.sql
