[tool.poetry]
name = "databases-poc"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "UNLICENSED"

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
databases = "^0.4.3"
aiosqlite = "^0.17.0"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
